<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    android:id="@+id/lay">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/titleBtc"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/courseBtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/countBtc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/titleUsd"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/courseUsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/countUsd"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/titleGbp"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/courseGbp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/countGbp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/titleEur"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"/>
        <TextView
            android:id="@+id/courseEur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/titleAppColor"
            android:textSize="35sp"
            android:text="@string/countEur"/>
    </LinearLayout>
    <Button
        android:id="@+id/updateCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:background="@drawable/border_radius_yellow"
        android:text="@string/buttonTitle"
        android:layout_marginTop="80dp"/>
</LinearLayout>